--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,8 @@
   "background": {
     "page": "background.html"
   },
-  "applications": {
-    "gecko": {
-      "id": "proxy-setter@example.com"
-    }
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
   }
 }
